<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_number"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_number"
        android:layout_margin="20dp"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:id="@+id/phone_number_tie"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/continuee"
        android:background="@drawable/background_login_btn"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="20dp"
        />
</LinearLayout>