<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginregister.LoginActivity">





    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/unitopper"
            android:layout_marginBottom="70dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/forget_password"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_login_btn"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/unitopper"
            android:layout_marginBottom="30dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinner_colleges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/i_agree_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/i_agree"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_login_btn"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlyt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/dont_have_ac" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textview"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlyt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/already_have_ac" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textview1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login" />

    </RelativeLayout>
    <!--    <LinearLayout-->
    <!--        android:layout_below="@id/linearLayout"-->
    <!--        android:id="@+id/linearLayout3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:gravity="center"-->
    <!--      >-->

    <!--        <View-->
    <!--            android:id="@+id/divider1"-->
    <!--            android:layout_width="30dp"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:background="@color/colorBlack"-->
    <!--            tools:layout_editor_absoluteX="1dp"-->
    <!--            tools:layout_editor_absoluteY="505dp" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:fontFamily="@font/poppins_light"-->
    <!--            android:text="@string/or"-->
    <!--            android:textSize="15sp" />-->

    <!--        <View-->
    <!--            android:id="@+id/divider2"-->
    <!--            android:layout_width="30dp"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:background="@color/colorBlack"-->
    <!--            tools:layout_editor_absoluteX="1dp"-->
    <!--            tools:layout_editor_absoluteY="505dp" />-->
    <!--    </LinearLayout>-->

    <!--    <LinearLayout-->
    <!--        android:layout_below="@id/linearLayout3"-->
    <!--        android:id="@+id/linearLayout2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--     >-->

    <!--        <androidx.cardview.widget.CardView-->
    <!--         app:cardBackgroundColor="@color/colorPrimary"-->
    <!--            android:id="@+id/login_button1"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="46sp"-->
    <!--            android:layout_marginStart="10dp"-->
    <!--            android:layout_marginEnd="10dp"-->
    <!--            android:layout_weight="1"-->
    <!--            app:cardCornerRadius="10dp"-->
    <!--            app:cardElevation="5dp">-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:gravity="center_vertical"-->
    <!--                android:orientation="horizontal"-->
    <!--                android:paddingLeft="10dp">-->

    <!--                <ImageView-->
    <!--                    android:layout_weight="1"-->
    <!--                    android:layout_width="30dp"-->
    <!--                    android:layout_height="30dp"-->
    <!--                    android:src="@drawable/facebook_png" />-->

    <!--                <TextView-->
    <!--                    android:fontFamily="@font/poppins_medium"-->
    <!--                    android:layout_weight="2"-->
    <!--                    android:textColor="@color/colorWhite"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="8dp"-->
    <!--                    android:text="Facebook"-->
    <!--                    android:textSize="14sp" />-->

    <!--            </LinearLayout>-->

    <!--&lt;!&ndash;            <com.facebook.login.widget.LoginButton&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/login_button"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_gravity="center_vertical"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:visibility="gone" />&ndash;&gt;-->
    <!--        </androidx.cardview.widget.CardView>-->

    <!--        <androidx.cardview.widget.CardView-->
    <!--            app:cardBackgroundColor="@color/colorPrimary"-->
    <!--            android:id="@+id/google_sign_in"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="40dp"-->
    <!--            android:layout_marginStart="5dp"-->
    <!--            android:layout_marginEnd="10dp"-->
    <!--            android:layout_weight="1"-->
    <!--            app:cardCornerRadius="10dp"-->
    <!--            app:cardElevation="5dp">-->

    <!--            <LinearLayout-->

    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="@android:color/transparent"-->
    <!--                android:gravity="center_vertical"-->
    <!--                android:orientation="horizontal"-->
    <!--                android:paddingLeft="10dp">-->

    <!--                <ImageView-->
    <!--                    android:layout_weight="1"-->
    <!--                    android:layout_width="20dp"-->
    <!--                    android:layout_height="20dp"-->
    <!--                    android:src="@drawable/google_png" />-->

    <!--                <TextView-->
    <!--                    android:fontFamily="@font/poppins_medium"-->
    <!--                    android:layout_weight="2"-->
    <!--                    android:textColor="@color/colorWhite"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="8dp"-->
    <!--                    android:text="Google"-->
    <!--                    android:textSize="14sp"/>-->

    <!--            </LinearLayout>-->
    <!--            &lt;!&ndash;        <com.google.android.gms.common.SignInButton&ndash;&gt;-->
    <!--            &lt;!&ndash;            android:visibility="invisible"&ndash;&gt;-->
    <!--            &lt;!&ndash;            android:id="@+id/google_sign_in"&ndash;&gt;-->
    <!--            &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
    <!--            &lt;!&ndash;            android:layout_height="55sp"&ndash;&gt;-->
    <!--            &lt;!&ndash;            android:background="@android:color/transparent" >&ndash;&gt;-->
    <!--            &lt;!&ndash;        </com.google.android.gms.common.SignInButton>&ndash;&gt;-->


    <!--        </androidx.cardview.widget.CardView>-->


    <!--    </LinearLayout>-->


</RelativeLayout>